[tool.poetry]
name = "coursework-05"
version = "0.1.0"
description = ""
authors = ["Andrey Evgl <evgl2004@yandex.ru>"]
readme = "README.md"
packages = [{include = "coursework_05"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.7"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
